--- a/src/main/resources/io/github/danthe1st/yagpl/ui/view/Editor.fxml
+++ b/src/main/resources/io/github/danthe1st/yagpl/ui/view/Editor.fxml
@@ -1,10 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
 
-
-<AnchorPane prefHeight="750.0" prefWidth="750.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.1" fx:controller="io.github.danthe1st.yagpl.ui.controller.EditorController">
-   <children>
-      <AnchorPane fx:id="editorPane" layoutX="86.0" layoutY="78.0" prefHeight="621.0" prefWidth="579.0" />
-   </children>
-</AnchorPane>
+<BorderPane xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="io.github.danthe1st.yagpl.ui.controller.EditorController">
+   <center>
+      <ScrollPane prefHeight="450.0" prefWidth="511.0" BorderPane.alignment="CENTER">
+         <content>
+            <AnchorPane fx:id="editorPane" style="-fx-background-color: #efefef;" />
+         </content>
+      </ScrollPane>
+   </center>
+   <left>
+      <ScrollPane BorderPane.alignment="CENTER">
+         <content>
+            <ListView fx:id="availableElementView" style="-fx-background-color: inherit;" />
+         </content>
+      </ScrollPane>
+   </left>
+</BorderPane>
