--- a/src/main/resources/io/github/danthe1st/yagpl/ui/view/FunctionView.fxml
+++ b/src/main/resources/io/github/danthe1st/yagpl/ui/view/FunctionView.fxml
@@ -13,6 +13,6 @@
       <Pane prefHeight="200.0" prefWidth="18.0" BorderPane.alignment="CENTER" />
    </left>
    <center>
-      <ListView fx:id="operationBox" onDragDetected="#dragOut" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+      <ListView fx:id="operationBox" BorderPane.alignment="CENTER" />
    </center>
 </BorderPane>
