--- a/src/main/resources/io/github/danthe1st/yagpl/ui/view/Editor.fxml
+++ b/src/main/resources/io/github/danthe1st/yagpl/ui/view/Editor.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 
@@ -9,7 +10,7 @@
    <center>
       <ScrollPane prefHeight="450.0" prefWidth="511.0" BorderPane.alignment="CENTER">
          <content>
-            <AnchorPane fx:id="editorPane" style="-fx-background-color: #efefef;" />
+            <AnchorPane fx:id="editorPane" style="-fx-background-color: #efefef;"/>
          </content>
       </ScrollPane>
    </center>
