functions are available, saving/loading

--- a/src/main/resources/io/github/danthe1st/yagpl/ui/view/Editor.fxml
+++ b/src/main/resources/io/github/danthe1st/yagpl/ui/view/Editor.fxml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 
@@ -10,7 +12,7 @@
    <center>
       <ScrollPane prefHeight="450.0" prefWidth="511.0" BorderPane.alignment="CENTER">
          <content>
-            <AnchorPane fx:id="editorPane" style="-fx-background-color: #efefef;"/>
+            <AnchorPane fx:id="editorPane" style="-fx-background-color: #efefef;" />
          </content>
       </ScrollPane>
    </center>
@@ -21,4 +23,25 @@
          </content>
       </ScrollPane>
    </left>
+   <top>
+      <MenuBar BorderPane.alignment="CENTER">
+        <menus>
+          <Menu mnemonicParsing="false" text="File">
+            <items>
+              <MenuItem mnemonicParsing="false" onAction="#save" text="Save" />
+            </items>
+          </Menu>
+          <Menu mnemonicParsing="false" text="Edit">
+            <items>
+              <MenuItem mnemonicParsing="false" text="Delete" />
+            </items>
+          </Menu>
+          <Menu mnemonicParsing="false" text="Help">
+            <items>
+              <MenuItem mnemonicParsing="false" text="About" />
+            </items>
+          </Menu>
+        </menus>
+      </MenuBar>
+   </top>
 </BorderPane>
