--- a/src/main/resources/io/github/danthe1st/yagpl/ui/view/OperationBlockView.fxml
+++ b/src/main/resources/io/github/danthe1st/yagpl/ui/view/OperationBlockView.fxml
@@ -3,16 +3,21 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 
 <BorderPane style="-fx-border-color: black;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="io.github.danthe1st.yagpl.ui.controller.OperationBlockViewController">
-   <top>
-      <Label fx:id="title" alignment="CENTER" maxWidth="1.7976931348623157E308" onMouseClicked="#onClick" text="&lt;title&gt;" BorderPane.alignment="CENTER" />
-   </top>
    <left>
       <Pane prefWidth="18.0" BorderPane.alignment="CENTER" />
    </left>
    <center>
       <AnchorPane fx:id="operationBox" minHeight="20.0" prefWidth="200.0" style="-fx-background-color: #aaaaaa;" BorderPane.alignment="CENTER" />
    </center>
+   <top>
+      <HBox fx:id="titleBox" BorderPane.alignment="CENTER">
+         <children>
+            <Label fx:id="title" alignment="CENTER" maxWidth="1.7976931348623157E308" onMouseClicked="#onClick" text="&lt;title&gt;" />
+         </children>
+      </HBox>
+   </top>
 </BorderPane>
