--- a/src/main/resources/io/github/danthe1st/yagpl/ui/view/FunctionView.fxml
+++ b/src/main/resources/io/github/danthe1st/yagpl/ui/view/FunctionView.fxml
@@ -1,18 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Pane?>
 
-<BorderPane style="-fx-border-color: black;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="io.github.danthe1st.yagpl.ui.controller.OperationBlockViewController">
+<BorderPane style="-fx-border-color: black;" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="io.github.danthe1st.yagpl.ui.controller.OperationBlockViewController">
    <top>
-      <Label fx:id="title" alignment="CENTER" maxWidth="1.7976931348623157E308" onMouseClicked="#onClick" text="&lt;title&gt;" BorderPane.alignment="CENTER" />
+      <AnchorPane maxWidth="1.7976931348623157E308">
+         <children>
+            <Label fx:id="title" alignment="CENTER" maxWidth="1.7976931348623157E308" onMouseClicked="#onClick" prefWidth="135.0" text="&lt;title&gt;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+               <padding>
+                  <Insets right="75.0" />
+               </padding></Label>
+            <Button mnemonicParsing="false" onAction="#functionExec" prefWidth="75.0" text="Execute" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+         </children>
+         <BorderPane.margin>
+            <Insets />
+         </BorderPane.margin>
+      </AnchorPane>
    </top>
    <left>
       <Pane prefWidth="18.0" BorderPane.alignment="CENTER" />
    </left>
    <center>
-      <AnchorPane fx:id="operationBox" minHeight="20.0" prefWidth="200.0" style="-fx-background-color: #aaaaaa;" BorderPane.alignment="CENTER" />
+      <AnchorPane fx:id="operationBox" minHeight="20.0" minWidth="200.0" style="-fx-background-color: #aaaaaa;" BorderPane.alignment="CENTER" />
    </center>
 </BorderPane>
